# rec-parser

.github/workflows/: test.yml
backend/: debug_cocktail_categorization.py  debug_ingredient_parser.py  fixed_debug_script.py  pyproject.toml  pyproject.toml.backup  pytest.ini  run_tests.py  simple_test.py  test_enhanced_ai_categorization.py
backend/app/: models.py
backend/app/routes/: recipes.py
backend/app/services/: ingredient_parser.py  recipe_service.py
backend/app/services/ai/: recipe_categorizer.py
backend/app/services/processors/: image_extractor.py  instruction_processor.py
backend/tests/: TESTING.md  __init__.py  conftest.py  test_ingredient_parser.py  test_models.py
backend/tests/test_routes/: test_health.py  test_recipes.py
backend/tests/test_services/: test_parsers.py  test_processors.py  test_recipe_service.py
frontend/src/app/: page.tsx
frontend/src/components/: RecipeCard.tsx
